[tool.poetry]
name = "hue2mqtt"
version = "0.3.1"
description = "Python Hue to MQTT Bridge"
authors = ["Dan Trickey <contact@trickey.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trickeydan/hue2mqtt"
homepage = "https://github.com/trickeydan/hue2mqtt"
documentation = "https://github.com/trickeydan/hue2mqtt"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
gmqtt = "^0.6.9"
aiohue = "^2.5.1"
pydantic = "^1.8.2"
toml = "^0.10.2"
click = "^8.0.1"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}
types-toml = "^0.1.3"
pytest-asyncio = "^0.15.1"

[tool.poetry.scripts]
hue2mqtt = 'hue2mqtt.app:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
