[tool.poetry]
name = "hue2mqtt"
version = "0.4.0"
description = "Python Hue to MQTT Bridge"
authors = ["Dan Trickey <contact@trickey.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trickeydan/hue2mqtt-python"
homepage = "https://github.com/trickeydan/hue2mqtt-python"
documentation = "https://github.com/trickeydan/hue2mqtt-python"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
gmqtt = "^0.6.10"
aiohue = "^2.5.1"
pydantic = "^1.9.2"
click = "^8.1.3"
aiohttp = "^3.8.1"
tomli = { version = "^2.0.1", python = "<=3.10" }

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}
pytest-asyncio = "^0.15.1"

[tool.poetry.scripts]
hue2mqtt = 'hue2mqtt.app:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
